CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/sfrosit_t_indiv_educ_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_educ_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_educ_hist</externalName>
    <label>Education History</label>
    <pluralLabel>Education History</pluralLabel>
</CustomObject>