CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/cde_source_vrfd_educ__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfd_educ__c</fullName>
    <description>cde_source_vrfd_educ</description>
    <externalDeveloperName>cde_source_vrfd_educ</externalDeveloperName>
    <label>How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>