CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/cde_stftry_degree__c.field-meta.xml
<CustomField>
    <fullName>cde_stftry_degree__c</fullName>
    <description>cde_stftry_degree</description>
    <externalDeveloperName>cde_stftry_degree</externalDeveloperName>
    <label>Degree Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>