CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/cde_type_hours__c.field-meta.xml
<CustomField>
    <fullName>cde_type_hours__c</fullName>
    <description>cde_type_hours</description>
    <externalDeveloperName>cde_type_hours</externalDeveloperName>
    <label>Hour Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>