CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/cde_type_school__c.field-meta.xml
<CustomField>
    <fullName>cde_type_school__c</fullName>
    <description>cde_type_school</description>
    <externalDeveloperName>cde_type_school</externalDeveloperName>
    <label>School Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>