CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/cde_vrfyd_educ__c.field-meta.xml
<CustomField>
    <fullName>cde_vrfyd_educ__c</fullName>
    <description>cde_vrfyd_educ</description>
    <externalDeveloperName>cde_vrfyd_educ</externalDeveloperName>
    <label>Verified Education Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>