CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/dte_compltn_exptd_educ__c.field-meta.xml
<CustomField>
    <fullName>dte_compltn_exptd_educ__c</fullName>
    <description>dte_compltn_exptd_educ</description>
    <externalDeveloperName>dte_compltn_exptd_educ</externalDeveloperName>
    <label>Expected Education Completion Date</label>
    <type>Date</type>
</CustomField>