CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/dte_rptd_change__c.field-meta.xml
<CustomField>
    <fullName>dte_rptd_change__c</fullName>
    <description>dte_rptd_change</description>
    <externalDeveloperName>dte_rptd_change</externalDeveloperName>
    <label>Change Reported Date</label>
    <type>Date</type>
</CustomField>