CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/idn_educ_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_educ_indiv__c</fullName>
    <description>idn_educ_indiv</description>
    <externalDeveloperName>idn_educ_indiv</externalDeveloperName>
    <label>Education ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_EDUC__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_EDUC__c</referenceTo>
    <relationshipLabel>Education Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_educ_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>