CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/idn_educ_indiv_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_educ_indiv_hist__c</fullName>
    <description>idn_educ_indiv_hist</description>
    <externalDeveloperName>idn_educ_indiv_hist</externalDeveloperName>
    <label>Education ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>