CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/nam_school__c.field-meta.xml
<CustomField>
    <fullName>nam_school__c</fullName>
    <description>nam_school</description>
    <externalDeveloperName>nam_school</externalDeveloperName>
    <label>School Name</label>
    <length>71</length>
    <type>Text</type>
</CustomField>