CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/nbr_credits__c.field-meta.xml
<CustomField>
    <fullName>nbr_credits__c</fullName>
    <description>nbr_credits</description>
    <externalDeveloperName>nbr_credits</externalDeveloperName>
    <label>Credit Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>