CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_educ_hist__x/fields/nbr_seq_educ_indiv__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_educ_indiv__c</fullName>
    <description>nbr_seq_educ_indiv</description>
    <externalDeveloperName>nbr_seq_educ_indiv</externalDeveloperName>
    <label>Education Individual Sequence Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>